@@ -7,4 +7,7 @@ SUBDIRS = src test doc
 document :
 	cd doc && make document
 
+cgi :
+	cd src && make aescm.cgi
+
 # end of Makefile.am
