@@ -6,7 +6,7 @@ SUBDIRS = lang
 
 # Program
 BUILT_SOURCES = deflang.c
-CLEANFILES = deflang.c langconf$(EXEEXT) aescm.cgi$(EXEEXT)
+CLEANFILES = deflang.c langconf$(EXEEXT) aescm.cgi$(EXEEXT) fescm.cgi$(EXEEXT)
 
 noinst_PROGRAMS = langconf
 langconf_SOURCES = langconf.c escm.c escm.h lang.c
@@ -21,7 +21,8 @@ DEFS = -DESCM_LANG_DIR=\"$(pkgdatadir)/lang/\" @DEFS@
 
 
 # CGI
-EXTRA_PROGRAMS = aescm.cgi
+EXTRA_PROGRAMS = aescm.cgi fescm.cgi
 aescm_cgi_SOURCES = cgimain.c escm.c escm.h escmcgi.c escmcgi.h $(BUILT_SOURCES)
+fescm_cgi_SOURCES = fifo.c escm.c escm.h escmcgi.c escmcgi.h $(BUILT_SOURCES)
 
 # end of src/Makefile.am
